- Mon May 03 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibgraphfabric.pl: Remove in favor of ibgraphfabric
	* : ibbouncelinks.pl: Remove obsolete "-R" option
			Update docs
			increase timeout for QDR links
	* : ibcheckfabric: Fix issue with new iblinkinfo output

- Mon Apr 26 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.4-4
	* : Update all the autoconf stuff to build without autoconf
	* : Check in "configure" support

- Fri Apr 23 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.4-3

- Fri Apr 23 2010 Mark Grondona <grondona1@llnl.gov>

	* : Use genders_query correctly.

- Thu Apr 22 2010 Ira Weiny <weiny2@llnl.gov>

	* : Update hostlist code to latest version

- Wed Apr 07 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibtraceroute: clean up error when no nodes are specified
	* : ibtraceroute: add "-m" option
	* : ibtraceroute: Default one node to "local" node
	* : ibtraceroute: fixed exit codes on lookup failure.

- Wed Mar 31 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.4-2

- Tue Mar 30 2010 Ira Weiny <weiny2@llnl.gov>

	* : Added --hosts option to slurm_topology
	* : cleaned up output of slurm_topology
		 - ordered switches
		 - grouped levels
		 - printed missing and looked for "compute" nodes

- Fri Feb 19 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.4
	* : Added ibhcacounters

- Thu Feb 18 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.3-2

- Tue Feb 09 2010 Ira Weiny <weiny2@llnl.gov>

	* : Added -g/-q option to slurm_topology

- Thu Feb 04 2010 Ira Weiny <weiny2@llnl.gov>

	* : Added -n option to slurm_topology

- Tue Dec 10 2009 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.3
	* : change ibsrp log dir to "/var/log/ibsrp"
	* : Remove modprobing of IB cards from ibsrp init script.  depmod and
	    modprobe should deal with "modprobe ib_srp" correctly.
	* : changed the unloading of ib_srp module and the stopping of the daemons

- Tue Nov 17 2009 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.0.2
	* : Initial checkin of ibgraphfabric C version.